# NewsAgent

./: ### NewsAgent ausfuehren.txt  .env  .env. WORKING  .env.example  .gitignore  Project description.txt  README.md  RunNewsAgent.bat  TO DO.txt  channels and languages.txt  clean-newsagent.ps1  pyproject.toml
.cache/youtube/: 11knSXGfdCU.txt  154mxKyWt_Y.txt  193uStB8nyc.txt  LWXvaEq0T8Q.txt  MX-_i-LNWFI.txt  Qo-KOMMZhTU.txt  SPsg5x6bpPI.txt  WoaIFZrflL0.txt  ZF6KEElmx0U.txt  _WCuekcyKr8.txt  nB9csVqyIlc.txt  rG_3uCJx_PQ.txt  s114O0ZNtj4.txt  wxrUsLMFzcs.txt
.github/workflows/: newsagent.yml
data/: channels.json  channels_debug.json
reports/: debug_transcripts.json
src/cache/: 1K6v-yb_oDI.txt  4_jDN45yLaM.txt  6kcj2MVH17k.txt  8eZ-mLQrC-M.txt  BUtyGFojEtc.txt  DKP3vh0lpk0.txt  DR-pAH88eUc.txt  EID68Ek7m7M.txt  FhudY0YdyPU.txt  GEzCXQ_8rU4.txt  IfN-_htA4sY.txt  JeTRL0jbbE0.txt  L1OfV-bVJ44.txt  NPoNbpWe2Iw.txt  P9dFA34SlOk.txt  PZ-2w19rX9Y.txt  PvDjueqhTJk.txt  Q47J638nNLo.txt  QVFuzKeJp9Q.txt  U50cKT8TCb8.txt  U8dyvBkaUE0.txt  UPJlLasy0GU.txt  WXT488PVreA.txt  X5fkipvDHR4.txt  YfC1k3ehL2I.txt  ZF6KEElmx0U.txt  ZsmiSh7dRh8.txt  b2ORzg3HrRw.txt  bhmg5ZogQhk.txt  dOaua-b_n0M.txt  dOyoljrgDJY.txt  fUKcVzJgPAA.txt  hTAUOb9Vncc.txt  jJwpfAraOQA.txt  jgexkUJMrs8.txt  jnis3Iz-6VU.txt  lkagHvnD7kw.txt  m42lsnZ4_gk.txt  n8oEJdkpqf4.txt  odNZnGLWJYw.txt  (+9 more)
src/newsagent/: main.py  main.py.WORKING
src/tools/: analyze_failed_channels.py
trash/: channel_list.json  config.py  debug_transcripts.json  markdown_report.py  news_agent.py  news_agent_quicktest.py  summarize.py
(+175 files in other folders)
